@@ -1,4 +1,4 @@
-.TH SINFO "1" "June 2011" "sinfo 2.3" "Slurm components"
+.TH SINFO "1" "September 2011" "sinfo 2.3" "Slurm components"
 
 .SH "NAME"
 sinfo \- view information about SLURM nodes and partitions.
@@ -171,6 +171,9 @@ Default time for any job in the format "days\-hours:minutes:seconds"
 Size of memory per node in megabytes
 \fB%M\fR
 PreemptionMode
+.TP
+\fB%n\fR
+List of node hostnames
 .TP
 \fB%N\fR
 List of node names
