@@ -2,7 +2,7 @@ This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 2.3.0
-============================
+========================
  -- BLUEGENE - make sure we only set the jobinfo_select start_loc on a job
     when we are on a small block, not a regular one.
  -- BGQ - fix issue where not copying the correct amount of memory.
@@ -14,6 +14,7 @@ documents those changes that are of interest to users and admins.
  -- BLUEGENE - fix to correctly import pervious version of block state file.
  -- BLUEGENE - handle loading better when doing a clean start with static
     blocks.
+ -- Add sinfo format and sort option "%n" for node_hostname.
 
 * Changes in SLURM 2.3.0.rc2
 ============================
